--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -82,6 +82,14 @@ $dark-block-2: #2B2C2E;
         --highlight-color: #262525 !important;
         background-color: #212020 !important;
     }
+    .portfolio-sec .copy-btn
+    {
+        background: rgb(89 89 93 / 55%) !important;
+        img
+        {
+            filter: grayscale(1) brightness(2);
+        }
+    }
     .nav-block{
         border-right: solid 1px $dark-border;
         border-top: solid 1px $dark-border;
@@ -582,16 +590,16 @@ $dark-block-2: #2B2C2E;
             }
         }
         .pagination .page-item .page-link{
-           background-color: $dark-bg;
-           border-color: #3E3E3E;
-           color: $primary-light;
+           background-color: $dark-bg !important;
+           border-color: #3E3E3E !important;
+           color: $primary-light !important;
            img{
             filter: grayscale(1) brightness(4);
            }
            &:hover, &.active{
-            background-color: #2D2D2D;
-            color: $primary-light;
-            border-color: #6F6F6F;
+            background-color: #2D2D2D !important;
+            color: $primary-light !important;
+            border-color: #6F6F6F !important;
             img{
                 filter: none;
             }
