--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -316,8 +316,10 @@
                                 border-radius: 0 0 0 8px;
                                 position: relative;
                                 border: none;
+                                z-index: 1;
                                 &::after{
                                     content: '';
+                                    z-index: -1;
                                     position: absolute;
                                     left: 0;
                                     top: 0;
@@ -333,8 +335,10 @@
                                 border-radius: 0 0 0 8px;
                                 position: relative;
                                 border: none;
+                                z-index: 1;
                                 &::after{
                                     content: '';
+                                    z-index: -1;
                                     position: absolute;
                                     left: 0;
                                     top: 0;
