--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -346,6 +346,7 @@
                 {
                     display: flex;
                     align-items: center;
+                    word-break: break-word;
                 }
                 p.txt-content
                 {
