--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -299,6 +299,14 @@
     background: #FFF;
     padding: 19px 28px;
     margin-top: 6px; }
+  .portfolio-sec .portfolio-card .tokenomics-graph-block {
+    padding: 10px 15px 20px;
+    text-align: center; }
+    .portfolio-sec .portfolio-card .tokenomics-graph-block img {
+      max-width: 100%;
+      max-height: 400px; }
+    .portfolio-sec .portfolio-card .tokenomics-graph-block .img-dark {
+      display: none; }
 
 .table-pagination-cover {
   display: flex;
@@ -355,6 +363,9 @@
     flex-shrink: 0; }
 
 @media (max-width: 1679px) {
+  .portfolio-sec .portfolio-card .tokenomics-graph-block img {
+    max-height: 300px; }
+
   .portfolio-sec .portfolio-card .title-wrapper .title-block h2 {
     font-size: 18px; }
 
