--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -390,6 +390,18 @@
             padding: 19px 28px;
             margin-top: 6px;
         }
+
+        .tokenomics-graph-block{
+            padding: 10px 15px 20px;
+            text-align: center;
+            img{
+                max-width: 100%;
+                max-height: 400px;
+            }
+            .img-dark{
+                display: none;
+            }
+        }
     }
 }
 
@@ -462,6 +474,9 @@
 }
 
 @media($sm-1679){
+    .portfolio-sec .portfolio-card .tokenomics-graph-block img{
+        max-height: 300px;
+    }
     .portfolio-sec .portfolio-card .title-wrapper .title-block h2{
         font-size: 18px;
     }
