--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -17,7 +17,7 @@ $font-primary: 'Poppins', sans-serif;
 
 // The base body size
 //––––––––––––––––––––––––––––––––––––––––––––––––––
-$body-font-size: 16px !default;
+$body-font-size: 1rem !default;
 
 
 // Colours
