--- a/css/home.css
+++ b/css/home.css
@@ -26,12 +26,12 @@
       color: #fff;
       padding-top: 15px; }
       .welcome-cover .content-block .text-block h4 {
-        font-size: 23px;
+        font-size: 1.438rem;
         font-weight: 400; }
         .welcome-cover .content-block .text-block h4 span {
           font-weight: 700; }
       .welcome-cover .content-block .text-block p {
-        font-size: 13px;
+        font-size: 0.813rem;
         font-weight: 500;
         color: #909AA6;
         margin-bottom: 0; }
@@ -74,11 +74,13 @@
         object-fit: cover; }
     .card-sec .h-card-block h2 {
       font-size: 22px;
+      font-size: 1.438rem;
       margin-bottom: 20px;
       font-weight: 600; }
     .card-sec .h-card-block p {
       color: #4D6090;
-      font-size: 14px; }
+      font-size: 14px;
+      font-size: 0.875rem; }
     .card-sec .h-card-block .join-btn {
       width: 100%;
       background-color: #2966FF;
@@ -93,16 +95,12 @@
   .card-sec .h-card-block {
     padding: 20px 25px 40px; }
 
-  .welcome-cover .content-block .text-block h4 {
-    font-size: 21px; }
-
   .card-sec .h-card-block h2 {
     font-size: 19px;
     margin-bottom: 15px; }
 
   .card-sec .h-card-block .join-btn {
-    padding: 10px 15px;
-    font-size: 15px; } }
+    padding: 10px 15px; } }
 @media (max-width: 1441px) {
   .card-sec .h-card-block {
     padding: 15px 20px 30px; }
@@ -110,9 +108,6 @@
   .card-sec .h-card-block h2 {
     font-size: 17px;
     margin-bottom: 15px; }
-
-  .welcome-cover .content-block .text-block h4 {
-    font-size: 19px; }
 
   .welcome-cover {
     padding: 20px 55px 25px; } }
@@ -122,9 +117,6 @@
 
   .welcome-cover .content-block .text-block h4 {
     font-size: 18px; } }
-@media (max-width: 767px) {
-  .card-sec .h-card-block .join-btn {
-    font-size: 14px; } }
 @media (max-width: 579px) {
   .welcome-cover .content-block .img-block {
     flex-shrink: 0;
