--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -26,7 +26,7 @@
   .portfolio-sec .lg-graph .graph-det-top {
     padding: 35px 40px 25px; }
   .portfolio-sec .lg-graph .graph-title-block {
-    margin-bottom: 40px; }
+    margin-bottom: 30px; }
     .portfolio-sec .lg-graph .graph-title-block .graph-title {
       flex: 1 1 auto;
       display: flex; }
@@ -366,6 +366,12 @@
   .portfolio-sec .portfolio-card .tokenomics-graph-block img {
     max-height: 300px; }
 
+  .portfolio-sec .lg-graph .graph-block {
+    max-height: 350px; }
+
+  .portfolio-sec .lg-graph .graph-title-block {
+    margin-bottom: 20px; }
+
   .portfolio-sec .portfolio-card .title-wrapper .title-block h2 {
     font-size: 18px; }
 
@@ -456,6 +462,9 @@
   .portfolio-sec .portfolio-card .table-pagination-cover {
     padding: 15px; } }
 @media (max-width: 1481px) {
+  .portfolio-sec .lg-graph .graph-block {
+    max-height: 300px; }
+
   .portfolio-sec .portfolio-card .title-wrapper .title-block h2 {
     font-size: 17px; }
 
@@ -503,8 +512,11 @@
     flex-wrap: wrap; }
 
   .portfolio-sec .lg-graph .graph-title-block {
-    margin-bottom: 20px; } }
+    margin-bottom: 15px; } }
 @media (max-width: 579px) {
+  .portfolio-sec .lg-graph .graph-title-block {
+    flex-wrap: wrap; }
+
   .portfolio-sec .lg-graph .graph-det-top {
     padding: 15px 15px 15px; }
 
