--- a/css/header.css
+++ b/css/header.css
@@ -271,6 +271,9 @@
       margin-left: 25px; }
     .header-wrapper .login-btn:hover {
       opacity: .8; }
+  @media (max-width: 991px) {
+    .header-wrapper .wallet-btn-cover-web {
+      margin-left: 8px; } }
   .header-wrapper .wallet-btn-cover-web .wallet-btn-connected {
     text-align: left; }
   .header-wrapper .prof-avt {
