--- a/scss/common.scss
+++ b/scss/common.scss
@@ -153,7 +153,7 @@ button{
     .filter-nav-btn{
         min-width: 120px;
         padding: 10px 15px;
-        font-size: 14px;
+        font-size: 0.879rem;
         background: $primary-light;
         color: $input-text-color;
         transition: .3s;
@@ -203,7 +203,7 @@ button{
 @media($sm-767){
     .filter-wrapper .filter-nav-btn {
         min-width: 80px;
-        font-size: 13px;
+        // font-size: 13px;
     }
     .filter-wrapper .title-search-box .input-group{
         width: 100%;
@@ -782,7 +782,7 @@ button{
     }
 }
 .progress-bar{
-    background-color: #0dad4d!important;
+    background-color: $primary-blue !important;
 }
 
 // btn loader
