--- a/scss/header.scss
+++ b/scss/header.scss
@@ -314,6 +314,9 @@
         }
     }
     .wallet-btn-cover-web{
+        @media($sm-991){
+            margin-left: 8px;
+        }
         .wallet-btn-connected{
             text-align: left;
         }
