--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -199,6 +199,9 @@
                             {
                                  flex-wrap: wrap;
                             }
+                            .c-rate{
+                                min-width: 80px;
+                            }
                             .d-rate
                             {
                                 margin-left: 65px;
@@ -397,6 +400,7 @@
             img{
                 max-width: 100%;
                 max-height: 400px;
+                margin: 0 auto;
             }
             .img-dark{
                 display: none;
