--- a/scss/header.scss
+++ b/scss/header.scss
@@ -69,7 +69,7 @@
             .pros-label{
                 display: inline-block;
                 color: #4D6090;
-                font-size: 14px;
+                font-size: 0.875rem;
                 padding-right: 15px;
             }
             .buy-pros-btn{
@@ -253,7 +253,7 @@
         }
     }
     .info-block{
-        font-size: 16px;
+        // font-size: 16px;
         color: $input-text-color;
         margin-right: 40px;
         .info-label{
@@ -284,7 +284,7 @@
         color: $primary-light;
         background: $primary-blue;
         padding: 8px 30px;
-        font-size: 14px;
+        font-size: 0.875rem;
         transition: .3s;
         white-space: nowrap;
         overflow: hidden;
@@ -393,7 +393,7 @@
         margin-left: 15px;
     }
     .header-wrapper .info-block{
-        font-size: 15px;
+        // font-size: 15px;
         margin-right: 25px;
     }
     .header-wrapper .info-block .info-val-end {
@@ -403,7 +403,7 @@
         width: 150px;
     }
     .header-wrapper .wallet-btn, .header-wrapper .login-btn, .header-wrapper .right-block .buy-btn{
-        font-size: 13px;
+        font-size: 0.813rem;
         padding: 8px 20px;
     }
     .header-wrapper .prof-avt img {
@@ -424,7 +424,7 @@
 
 @media($sm-1481){
     .header-wrapper .right-block .buy-pros-block .pros-label{
-        font-size: 13px;
+        font-size: 0.813rem;
         padding-right: 5px;
     }
     .header-wrapper .right-block .buy-pros-block {
@@ -457,7 +457,7 @@
         margin-left: 10px;
     }
     .header-wrapper .info-block{
-        font-size: 14px;
+        // font-size: 14px;
         margin-right: 20px;
     }
     .header-wrapper .info-block .info-val-end {
@@ -493,7 +493,7 @@
         margin-right: 5px;
     }
     .header-wrapper .info-block {
-        font-size: 13px;
+        font-size: 0.813rem;
         margin-right: 10px;
     }
     .header-wrapper .info-block .info-val-end {
