--- a/scss/home.scss
+++ b/scss/home.scss
@@ -82,7 +82,7 @@
             }
         }
         h2{
-            font-size: 22px;
+            // font-size: 22px;
             font-size: 1.438rem;
             margin-bottom: 20px;
             font-weight: 600;
@@ -114,7 +114,8 @@
         // font-size: 21px;
     }
     .card-sec .h-card-block h2 {
-        font-size: 19px;
+        // font-size: 19px;
+        font-size: 1.25rem;
         margin-bottom: 15px;
     }
     .card-sec .h-card-block .join-btn{
@@ -127,7 +128,8 @@
         padding: 15px 20px 30px;
     }
     .card-sec .h-card-block h2 {
-        font-size: 17px;
+        // font-size: 17px;
+        font-size: 1.125rem;
         margin-bottom: 15px;
     }
     .welcome-cover .content-block .text-block h4{
@@ -142,7 +144,7 @@
         padding: 20px 30px 25px;
     }
     .welcome-cover .content-block .text-block h4 {
-        font-size: 18px;
+        // font-size: 18px;
     }
 }
 @media($sm-767){
