--- a/css/home.css
+++ b/css/home.css
@@ -73,7 +73,6 @@
         height: 100%;
         object-fit: cover; }
     .card-sec .h-card-block h2 {
-      font-size: 22px;
       font-size: 1.438rem;
       margin-bottom: 20px;
       font-weight: 600; }
@@ -96,7 +95,7 @@
     padding: 20px 25px 40px; }
 
   .card-sec .h-card-block h2 {
-    font-size: 19px;
+    font-size: 1.25rem;
     margin-bottom: 15px; }
 
   .card-sec .h-card-block .join-btn {
@@ -106,17 +105,14 @@
     padding: 15px 20px 30px; }
 
   .card-sec .h-card-block h2 {
-    font-size: 17px;
+    font-size: 1.125rem;
     margin-bottom: 15px; }
 
   .welcome-cover {
     padding: 20px 55px 25px; } }
 @media (max-width: 1199px) {
   .welcome-cover {
-    padding: 20px 30px 25px; }
-
-  .welcome-cover .content-block .text-block h4 {
-    font-size: 18px; } }
+    padding: 20px 30px 25px; } }
 @media (max-width: 579px) {
   .welcome-cover .content-block .img-block {
     flex-shrink: 0;
