--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -629,4 +629,8 @@ $dark-block-2: #2B2C2E;
     .sec-title-block .create-btn{
         border: solid 1px $dark-border-2;
     }
+    .card-section-outer .filter-wrapper{
+        border-radius: 0;
+        border-bottom: solid 1px $dark-border;        
+    }
 }
